@@ -87,6 +87,7 @@
 	  incoming connection
 	* added more detailed instrumentation of the disk I/O thread
 
+	* exposed alert error_codes to python
 	* fixed bug in announce_entry::next_announce_in and min_announce_in
 	* fixed sign issue in set_alert_mask signature
 	* fixed unaligned disk access for unbuffered I/O in windows
